--- a/style.css
+++ b/style.css
@@ -4,5 +4,76 @@
     box-sizing: border-box;
 }
 
+body{
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    row-gap: 1rem;
+    column-gap: 1rem;
+}
+
+.quicker{
+    background-color:  hsl(31, 66%, 93%);
+    grid-column: 1/2;
+    grid-row: 1/3;
+    border-radius: 1rem;
+}
+
+.social_media{
+    background-color: hsl(256, 67%, 59%);
+    grid-column: 2/4;
+    grid-row: 1/3;
+    border-radius: 1rem;
+}
+
+.calender{
+    background-color: hsl(254, 88%, 90%);
+    grid-column: 4/5;
+    grid-row: 1/4;
+    border-radius: 1rem;
+}
+
+.write {
+    background-color: hsl(39, 100%, 71%);
+    grid-column: 1/2;
+    grid-row: 3/5;
+    border-radius: 1rem;
+}
+
+.manage{
+    background-color: white;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    border-radius: 1rem;
+}
+
+.schedule{
+    background-color: hsl(39, 100%, 71%);
+    grid-column: 3/4;
+    grid-row: 3/4;
+    border-radius: 1rem;
+}
+
+.percent{
+    background-color: white;
+    grid-column: 2/3;
+    grid-row: 4/5;
+    border-radius: 1rem;
+}
+
+.grow{
+    background-color: hsl(256, 67%, 59%);
+    grid-column: 3/5;
+    grid-row: 4/5;
+    border-radius: 1rem;
+}
+
+img{
+    width: 300px;
+    height: 200px;
+}
+
+
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
