--- a/style.css
+++ b/style.css
@@ -8,64 +8,64 @@ body{
     width: 100vw;
     height: 100vh;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-areas: 
+    'a b b c'
+    'a b b c'
+    'a b b c'
+    'a d e c'
+    'f d e c'
+    'f g h h'
+    'f g h h'
+    ;
     row-gap: 1rem;
     column-gap: 1rem;
 }
 
 .quicker{
     background-color:  hsl(31, 66%, 93%);
-    grid-column: 1/2;
-    grid-row: 1/3;
+    grid-area: a;
     border-radius: 1rem;
 }
 
 .social_media{
     background-color: hsl(256, 67%, 59%);
-    grid-column: 2/4;
-    grid-row: 1/3;
+    grid-area: b;
     border-radius: 1rem;
 }
 
 .calender{
     background-color: hsl(254, 88%, 90%);
-    grid-column: 4/5;
-    grid-row: 1/4;
+    grid-area: c;
     border-radius: 1rem;
 }
 
 .write {
     background-color: hsl(39, 100%, 71%);
-    grid-column: 1/2;
-    grid-row: 3/5;
+    grid-area: f;
     border-radius: 1rem;
 }
 
 .manage{
     background-color: white;
-    grid-column: 2/3;
-    grid-row: 3/4;
+    grid-area: d;
     border-radius: 1rem;
 }
 
 .schedule{
     background-color: hsl(39, 100%, 71%);
-    grid-column: 3/4;
-    grid-row: 3/4;
+    grid-area: e;
     border-radius: 1rem;
 }
 
 .percent{
     background-color: white;
-    grid-column: 2/3;
-    grid-row: 4/5;
+    grid-area: g;
     border-radius: 1rem;
 }
 
 .grow{
     background-color: hsl(256, 67%, 59%);
-    grid-column: 3/5;
-    grid-row: 4/5;
+    grid-area: h;
     border-radius: 1rem;
 }
 
