--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+
 *{
     padding: 0;
     margin: 0;
@@ -19,18 +21,59 @@ body{
     ;
     row-gap: 1rem;
     column-gap: 1rem;
+    padding: 0.5rem 0.4rem 0  0.4rem;
+    font-family: 'DM Sans';
 }
 
 .quicker{
     background-color:  hsl(31, 66%, 93%);
     grid-area: a;
     border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 2rem;
+}
+.quicker h2{
+    width: 90%;
+    font-size: 2.2rem;
+    font-weight: 500;
+}
+.quicker span{
+    color: hsl(256, 67%, 59%);
+}
+.quicker img{
+    width: 250px;
+    height: 120px;
 }
 
 .social_media{
     background-color: hsl(256, 67%, 59%);
     grid-area: b;
     border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 0.5rem;
+}
+h1 {
+    color: white;
+    font-size: 3rem;
+    text-align: center;
+    font-weight: 500;
+}
+.social_media span{
+    color: hsl(39, 100%, 71%);
+}
+.social_media img{
+    width: 250px;
+    height: 50px;
+    margin-top: 1rem;
+}
+.social_media small{
+    color: white;
 }
 
 .calender{
