--- a/style.css
+++ b/style.css
@@ -36,8 +36,9 @@ body{
     row-gap: 2rem;
 }
 .quicker h2{
-    width: 90%;
-    font-size: 2.2rem;
+    width: 66%;
+    line-height: 2.3rem;
+    font-size: 2.4rem;
     font-weight: 500;
 }
 .quicker span{
@@ -59,6 +60,8 @@ body{
     row-gap: 0.5rem;
 }
 h1 {
+    width: 50%;
+    line-height: 3.5rem;
     color: white;
     font-size: 3rem;
     text-align: center;
