feature: temporary css layout

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body{
     column-gap: 1.5rem;
     padding: 0.5rem 0.4rem 0  0.4rem;
     font-family: 'DM Sans';
+    background-color: rgb(243, 243, 243);
 }
 
 .quicker{
@@ -34,7 +35,7 @@ body{
     justify-content: center;
     align-items: center;
     row-gap: 2rem;
-    box-shadow: 4px 6px 7px rgba(0, 0, 0, 0.133);
+    box-shadow: 4px 6px 7px rgba(137, 137, 137, 0.133);
 }
 h2{
     font-weight: 500;
@@ -61,7 +62,7 @@ h2{
     justify-content: center;
     align-items: center;
     row-gap: 0.5rem;
-    box-shadow: 4px 6px 7px rgba(0, 0, 0, 0.133);
+    box-shadow: 4px 6px 7px rgba(137, 137, 137, 0.133);
 }
 h1 {
     width: 50%;
@@ -92,7 +93,7 @@ h1 {
     justify-content: center;
     padding-left: 3rem;
     row-gap: 2.5rem;
-    box-shadow: 4px 6px 7px rgba(0, 0, 0, 0.133);
+    box-shadow: 4px 6px 7px rgba(137, 137, 137, 0.133);
 }
 .calender h2{
     font-size: 2.4rem;
@@ -114,7 +115,7 @@ p{
     justify-content: center;
     align-items: center;
     row-gap: 2rem;
-    box-shadow: 4px 6px 7px rgba(0, 0, 0, 0.133);
+    box-shadow: 4px 6px 7px rgba(137, 137, 137, 0.133);
 }
 .write h2{
     width: 54%;
@@ -128,27 +129,37 @@ p{
     background-color: white;
     grid-area: d;
     border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 1.5rem;
+    box-shadow: 4px 6px 7px rgba(137, 137, 137, 0.133);
+}
+.manage h2 {
+    font-size: 2.3rem;
+    width: 61%;
 }
 
 .schedule{
     background-color: hsl(39, 100%, 71%);
     grid-area: e;
     border-radius: 1rem;
-    box-shadow: 4px 6px 7px rgba(0, 0, 0, 0.133);
+    box-shadow: 4px 6px 7px rgba(137, 137, 137, 0.133);
 }
 
 .percent{
     background-color: white;
     grid-area: g;
     border-radius: 1rem;
-    box-shadow: 4px 6px 7px rgba(0, 0, 0, 0.133);
+    box-shadow: 4px 6px 7px rgba(137, 137, 137, 0.133);
 }
 
 .grow{
     background-color: hsl(256, 67%, 59%);
     grid-area: h;
     border-radius: 1rem;
-    box-shadow: 4px 6px 7px rgba(0, 0, 0, 0.133);
+    box-shadow: 4px 6px 7px rgba(137, 137, 137, 0.133);
 }
 
 img{
