--- a/style.css
+++ b/style.css
@@ -132,13 +132,18 @@ p{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    padding-left: 2rem;
     row-gap: 1.5rem;
     box-shadow: 4px 6px 7px rgba(137, 137, 137, 0.133);
+    overflow-x: hidden;
+}
+.manage img {
+    height: 20%;
+    width: 136%;
 }
 .manage h2 {
     font-size: 2.3rem;
-    width: 61%;
+    width: 65%;
 }
 
 .schedule{
