--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body{
     'f g h h'
     'f g h h'
     ;
-    row-gap: 0.7rem;
-    column-gap: 1.5rem;
+    row-gap: 1rem;
+    column-gap: 2.8rem;
     padding: 0.5rem 0.4rem 0  0.4rem;
     font-family: 'DM Sans';
     background-color: rgb(243, 243, 243);
@@ -174,16 +174,16 @@ p{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-left: 2rem;
     row-gap: 1rem;
-    align-items: center;
 }
 .percent h1{
     font-size: 3.5rem;
     color: black;
     width: fit-content;
+    text-align: none;
 }
 .percent small{
-    text-align: center;
     display: block;
     font-size: 1rem;
 }
