--- a/styleMedia.css
+++ b/styleMedia.css
@@ -105,10 +105,16 @@
 
   .social_media {
     grid-area: a;
+    padding: 1rem 0 1rem 0;
   }
   h1 {
-    width: 51%;
+    width: 48%;
     font-size: 1.9rem;
+  }
+  .social_media img {
+    margin-top: 1rem;
+    width: 200px;
+    height: 30px;
   }
 
   .manage {
