--- a/styleMedia.css
+++ b/styleMedia.css
@@ -130,6 +130,11 @@
 
   .schedule {
     grid-area: c;
+    align-items: unset;
+    padding-left: 1.5rem;
+  }
+  .schedule img{
+    height: 62%;
   }
 
   .calender {
