--- a/styleMedia.css
+++ b/styleMedia.css
@@ -149,13 +149,27 @@
   .calender img {
     width: 91%;
   }
-  p{
+  p {
     text-align: center;
     width: 90%;
   }
 
   .grow {
     grid-area: e;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 1rem 0 1rem 0;
+    row-gap: 1.7rem;
+  }
+  .grow h2 {
+    /* font-size: 2.3rem; */
+    width: 70%;
+    text-align: center;
+    line-height: 1.7rem;
+  }
+  .grow img {
+    height: 75%;
+    width: 70%;
   }
 
   .percent {
