--- a/styleMedia.css
+++ b/styleMedia.css
@@ -162,7 +162,6 @@
     row-gap: 1.7rem;
   }
   .grow h2 {
-    /* font-size: 2.3rem; */
     width: 70%;
     text-align: center;
     line-height: 1.7rem;
@@ -174,6 +173,10 @@
 
   .percent {
     grid-area: f;
+    padding: 1.5rem 0 1rem 1.5rem;
+  }
+  .percent h1 {
+    font-size: 2.9rem;
   }
 
   .quicker {
